# discord-bot

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  TODO.txt  bot.py  create_db.py  pyproject.toml  register.py  requirements.txt  setup.py  tmp.ipynb  utils.py
.github/workflows/: tests.yml
bot/: _background.py  _commands.py  _random_msg.py  _random_processes.py  bot.py  config.py  queries.py  register.py  registers.py  utils.py
tests/: test_utils.py
